--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-simple-chatbot": "^0.6.1",
+    "survey-react": "^1.9.27",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
