--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.8.1",
+    "fontawesome": "^5.6.3",
     "heroku": "^7.60.1",
     "react": "^18.0.0",
     "react-chatbot-kit": "^2.0.1",
     "react-dom": "^18.0.0",
+    "react-ga4": "^1.4.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-simple-chatbot": "^0.6.1",
